Bank 11 sprite renaming done

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 Change tests to not rely on compiled files (i.e. autopack test)
 Compile package so location of packages doesn't matter
 
-Rename all sprites 11, 20, 25
+Rename all sprites 20, 25
 
 
+fx banks (spells and attacks)
