--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,5 @@
 Change tests to not rely on compiled files (i.e. autopack test)
 Compile package so location of packages doesn't matter
 
-Rename all sprites 20, 25
 
-
-fx banks (spells and attacks)
+Define non-standard tile offsets (e.g. CardsceneFX -> $40)
