--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 Change tests to not rely on compiled files (i.e. autopack test)
 Compile package so location of packages doesn't matter
 
-Get sprite tilesets
 Define non-standard tile offsets (e.g. CardsceneFX -> $40)
 Preview all sprites (both .spr files as well as SCRIPT_ANIMs)
+Add tests for sprite preview, sprite palettes and sprite non-standard offsets
+
+Don't define banks in game.asm, move them directly into the child .asm files
